/*
 * Copyright (C) 2015 Seoul National University
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
option java_package = "edu.snu.reef.dolphin.neuralnet.proto";
option java_outer_classname = "NeuralNetworkProtos";

message FullyConnectedLayerConfiguration {
  required float init_bias = 1;
  required float init_weight = 2;
  optional uint32 random_seed = 3;
  required string activation_function = 4;
}

message LayerConfiguration {
  required string type = 1;
  required uint32 num_input = 2;
  required uint32 num_output = 3;
  optional FullyConnectedLayerConfiguration fully_connected_param = 4;
}

message ParameterProviderConfiguration {
  required string type = 1;
}

message NeuralNetworkConfiguration {
  repeated LayerConfiguration layer = 1;
  optional uint32 batch_size = 2;
  optional float stepsize = 3;
  required ParameterProviderConfiguration parameter_provider = 4;
}
